syntax = "proto3";

package entities.v1;

// Owner: feature/comments-system
// Dependencies: entities.v1.Post from posts feature

import "google/protobuf/timestamp.proto";

// === ENTITY DEFINITIONS START ===
// Add entity messages below this line

message Comment {
  // Comment fields will be defined by comments-system feature
  string id = 1;
  string post_id = 2;
  string parent_comment_id = 3;
  
  // Author info
  string author_user_id = 4;
  string author_session_id = 5;
  string author_username = 6;
  bool is_verified_author = 7;
  
  // Content
  string content = 8;
  string display_content = 9; // Shows "[deleted]" if deleted
  
  // Metadata
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  
  // Deletion info
  bool is_deleted = 12;
  google.protobuf.Timestamp deleted_at = 13;
  string deleted_by = 14;
  
  // Tree structure
  int32 depth = 15;
  string comment_type = 16; // "root", "reply", "orphaned_reply"
  
  // Nested replies (for tree display)
  repeated Comment replies = 17;
  int32 reply_count = 18;
}

message CommentThread {
  repeated Comment root_comments = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

// === ENTITY DEFINITIONS END ===